--- a/SFMC4NET/SFMC4NET.csproj
+++ b/SFMC4NET/SFMC4NET.csproj
@@ -5,11 +5,11 @@
     <Authors>David Maldonado</Authors>
     <Company />
     <Description>Salesforce Marketing Cloud for .NET
-Retrieve/Update data from/to Data Extensions easily.
+Retrieve/Update data from/to Data Extensions easily. Trigger Events and Automations
 </Description>
     <PackageTags>SFMC Marketing Cloud Salesforce</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.6-beta</Version>
+    <Version>1.0.6</Version>
     <AssemblyVersion>1.0.0.6</AssemblyVersion>
     <FileVersion>1.0.0.6</FileVersion>
     <PackageProjectUrl>https://github.com/iqdamn/SFMC4NET</PackageProjectUrl>
