--- a/SFMC4NET/SFMC4NET.csproj
+++ b/SFMC4NET/SFMC4NET.csproj
@@ -9,9 +9,9 @@ Retrieve/Update data from/to Data Extensions easily. Trigger Events and Automati
 </Description>
     <PackageTags>SFMC Marketing Cloud Salesforce</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.6</Version>
-    <AssemblyVersion>1.0.0.6</AssemblyVersion>
-    <FileVersion>1.0.0.6</FileVersion>
+    <Version>1.0.7-beta</Version>
+    <AssemblyVersion>1.0.0.7</AssemblyVersion>
+    <FileVersion>1.0.0.7</FileVersion>
     <PackageProjectUrl>https://github.com/iqdamn/SFMC4NET</PackageProjectUrl>
     <RepositoryUrl>https://github.com/iqdamn/SFMC4NET</RepositoryUrl>
     <RepositoryType>Github</RepositoryType>
